--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Travel Destination</title>
+  <title>Weather Forecast</title>
   <link rel="stylesheet" href="style.css">
 
 </head>
